--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <p class="alert"><%= alert %></p>
     <nav>
       <% if user_signed_in? %>
-        <p>Welcome, Foo! | <%= link_to 'Logout', destroy_user_session_path, method: "delete" %></p>
+        <p>Welcome, <%= current_user.email %>! | <%= link_to 'Logout', destroy_user_session_path, method: "delete" %></p>
       <% else %>
         <p><%= link_to 'Login', new_user_session_path %> | <%= link_to 'Sign Up', new_user_registration_path%>
       <% end %>
